--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/luxon": "^3.3.7",
+    "cities.json": "^1.1.31",
+    "city-timezones": "^1.2.1",
+    "dayjs": "^1.11.10",
     "gl-matrix": "^3.4.3",
     "konva": "^9.2.3",
+    "luxon": "^3.4.4",
+    "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.10",
