--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cities.json": "^1.1.31",
     "city-timezones": "^1.2.1",
     "dayjs": "^1.11.10",
+    "fuse.js": "^7.0.0",
     "gl-matrix": "^3.4.3",
     "konva": "^9.2.3",
     "luxon": "^3.4.4",
